--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node out/server.js",
+    "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev --name init"
+  },
   "devDependencies": {
+    "@types/express": "^5.0.5",
     "prisma": "^6.18.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0"
+    "@prisma/client": "^6.18.0",
+    "express": "^5.1.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
