--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "ts-node-dev": "^2.0.0"
   }
