--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node out/server.js",
     "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
     "prisma:migrate": "npx prisma migrate dev --name init"
   },
@@ -12,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "ts-node-dev": "^2.0.0"
   }
